...
  };

  const handlePressLeftArrow = () => {
    Alert.alert("그만두시겠습니까?", "기도 기록 페이지로 넘어갑니다.", [
      { text: "취소", style: "cancel" },
      {
        text: "그만두기",
        onPress: async () => {
          await navigateToPrayerRecord(elapsedTime);
        },
      },
    ]);
  };
...
      {isContentVisible && (
        <Animated.View style={[styles.content, { opacity: contentOpacity }]}>
          <Header
            style={styles.header}
            prefix={
              <CustomButton
                testID="free-prayer-quit"
                style={{ width: "auto" }}
                onPress={handlePressLeftArrow}
              >
                <MediumText style={{ color: "#959FFF" }} fontSize={14}>
                  그만두기
                </MediumText>
...
