...
          styles.buttonWrapper,
          {
            bottom: insets.bottom,
          },
        ]}
      >
        <PrimaryButton testID="free-prayer-setup-start" onPress={handlePressStartPrayer} style={styles.startButton}>
          <MediumText fontSize={14}>기도 시작하기</MediumText>
        </PrimaryButton>
      </View>
    </ImageBackground>
  );
}
...
