...
            onPress: async () => {
              // 기도 중 상태 초기화
              await AsyncStorage.removeItem(ASYNC_IS_PRAYING);
            }
          },
          {
            text: "이어서 기도하기",
            onPress: () => {
              if (entryPath === "/freePrayer") {
                router.navigate({
                  pathname: "/freePrayer",
                  params: {
                    plan_id: plan_id,
...
