...
      {/* Controller */}
      {
        repeatCount > 0
          ? (
            <View style={[styles.controller, { width: moderateScale(320) }]}>
              <PrimaryButton
                testID="timer-complete"
                onPress={() => onPressCompleteBtn(countdown.elapsedTime)}
                style={styles.completeButton}
              >
                <MediumText
                  fontSize={14}
                >
...
