...

    if (isDownloaded) {
      router.navigate({
        pathname: `/planDetail/[plan_id]`,
        params: {
          plan_id: plan.plan_id,
          title: "기도 플랜",
          banner: plan.thumbnail,
          isLiked: '',
          backToLink: '/plan'
        },
      });
    } else {
      Alert.alert(
        "다운로드",
        `${plan.title} 플랜을 다운로드 하시겠습니까?`,
        [
          {
            text: "취소",
            style: "cancel"
          },
...
