...
        paddingHorizontal: moderateScale(24),
        opacity: buttonOpacity.current,
        transform: [{ translateY: buttonTranslateY.current }],
      }
      }>
        <PrimaryButton
          testID="plan-detail-start"
          onPress={handlePressContinueBtn}
          style={{
            paddingVertical: moderateScale(14)
          }}>
          <MediumText
            fontSize={14}
...
