...
  const handlePressLeftArrow = () => {
    Alert.alert(
      '그만두시겠습니까?', // title
      '기도 기록 페이지로 넘어갑니다.', // message
      [                     // buttons
        { text: '취소', style: 'cancel' },
        { text: '그만두기', onPress: () => handlePressCompleteBtn(elapsedTime) }
      ]
    )
  }

  const handlePressMusic = () => {
    Alert.alert(
...
        <Animated.View style={[styles.content, { opacity: contentOpacity }]}>
          <Header
            style={styles.header}
            prefix={
              <CustomButton style={{
                width: "auto"
              }} onPress={handlePressLeftArrow} testID="lecture-prayer-quit">
                <MediumText style={{
                  color: "#959FFF"
                }} fontSize={14}>
                  그만두기
                </MediumText>
              </CustomButton>
...
